# aquagpusph

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Code styling  README  README.md  Releases notes  TODO  config.h.clang.cmake  config.h.cmake  config.h.gcc.cmake  countLines.sh  index.html  params.json
aquagpusph/: ArgumentsManager.cpp  ArgumentsManager.hpp  AuxiliarMethods.cpp  AuxiliarMethods.hpp  CMakeLists.txt  FileManager.cpp  FileManager.hpp  ProblemSetup.cpp  ProblemSetup.hpp  TimeManager.cpp  TimeManager.hpp  Variable.cpp  Variable.hpp  main.cpp  main.rc  sphPrerequisites.hpp
aquagpusph/CalcServer/: Assert.cpp  Assert.hpp  CalcServer.cpp  CalcServer.hpp  Conditional.cpp  Conditional.hpp  Copy.cpp  Copy.hpp  Kernel.cpp  Kernel.hpp  LinkList.cl.in  LinkList.cpp  LinkList.hcl.in  LinkList.hpp  MPISync.cl.in  MPISync.cpp  MPISync.hcl.in  MPISync.hpp  Python.cpp  Python.hpp  RadixSort.cl.in  RadixSort.cpp  RadixSort.hcl.in  RadixSort.hpp  Reduction.cl.in  Reduction.cpp  Reduction.hcl.in  Reduction.hpp  Set.cl.in  Set.cpp  Set.hcl.in  Set.hpp  SetScalar.cpp  SetScalar.hpp  Sort.cl.in  Sort.cpp  Sort.hcl.in  Sort.hpp  Tool.cpp  Tool.hpp  (+3 more)
aquagpusph/InputOutput/: ASCII.cpp  ASCII.hpp  CSV.cpp  CSV.hpp  FastASCII.cpp  FastASCII.hpp  Logger.cpp  Logger.hpp  Particles.cpp  Particles.hpp  Report.cpp  Report.hpp  State.cpp  State.hpp  VTK.cpp  VTK.hpp
aquagpusph/Tokenizer/: Tokenizer.cpp  Tokenizer.hpp  Tokenizer_exprtk.cpp  Tokenizer_exprtk.hpp  Tokenizer_muparser.cpp  Tokenizer_muparser.hpp
doc/: CMakeLists.txt  eulerXYZ.wxm
doc/cMake/: Doxyfile.in
doc/devManual/: abstract.tex  buildPDF.sh  directory_tree.tex  images  main.aux  main.bbl  main.out  main.tex  main.toc  structure.tex  tree_py.tex
doc/userManual/: DeLeffe.tex  abstract.tex  aquagpusph.tex  asciiPartsInput.tex  bib.bib  buildPDF.sh  directory_tree.tex  elasticbounce.tex  errorMsg.tex  examples.tex  fixparticles.tex  ghostparticles.tex  gidPartsInput.tex  infoMsg.tex  install.tex  lateral_water_1x_deleffe.tex  lateral_water_1x_ghost.tex  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  motionControls.tex  motionTypes.tex  outputFiles.tex  paraview.tex  partsInput.tex  physics.tex  running.tex  sensors.tex  tree_py.tex  warningMsg.tex  xmlInput.tex  xmlPartsInput.tex
examples/: CMakeLists.txt  aqua_example_utils.py
examples/2D/: CMakeLists.txt
examples/3D/: CMakeLists.txt
examples/LateralWater_1x_DeLeffe/: Create.py
examples/LateralWater_1x_Fix/: Create.py
examples/LateralWater_1x_Ghost/: Create.py
examples/lobovsky_etal_jfs_2013/: Create.py
examples/lobovsky_etal_jfs_2014/: Create.py
examples/perezrojas_etal_stab_2012/: Create.py  Test.py
include/: ArgumentsManager.h  AuxiliarMethods.h  CMakeLists.txt  CalcServer.h  FileManager.h  Fluid.h  Input.h  Output.h  ProblemSetup.h  PyCast.h  ScreenManager.h  Singleton.h  TimeManager.h  Variable.h  sphPrerequisites.h
include/CalcServer/: Assert.h  Bounds.h  Conditional.h  Copy.cl.in  Copy.h  Copy.hcl.in  Corrector.h  DensityInterpolation.h  Domain.h  Energy.h  Grid.h  If.h  Kernel.h  LinkList.cl.in  LinkList.h  LinkList.hcl.in  MPISync.cl.in  MPISync.h  MPISync.hcl.in  Permutate.h  Predictor.h  Python.h  RadixSort.cl.in  RadixSort.h  RadixSort.hcl.in  Rates.h  Reduction.cl.in  Reduction.h  Reduction.hcl.in  Sensors.h  Set.cl.in  Set.h  Set.hcl.in  SetScalar.h  Shepard.h  Sort.cl.in  Sort.h  Sort.hcl.in  TimeStep.h  Tool.h  (+4 more)
include/Input/: ASCII.h  GiD.h  XML.h
include/InputOutput/: ASCII.h  Bounds.h  Energy.h  FastASCII.h  InputOutput.h  Log.h  Logger.h  Particles.h  Report.h  State.h  VTK.h
include/Tokenizer/: Tokenizer.h
resources/: CMakeLists.txt  OpenCLMain.xml.in
resources/OpenCL/: Bounds.cl  Corrector.cl  DensInt.cl  DensInt.hcl  Domain.cl  Energy.cl  Forces.cl  IdInverse.cl  Inlet.cl  InletFeed.cl  Interactions.cl  Interactions.hcl  InteractionsBounds.hcl  InteractionsSensors.hcl  LinkList.cl  MotionAcceleration.cl  MotionTransform.cl  MotionUnTransform.cl  MotionVelocity.cl  NonFluidSet.cl  Permutate.cl  Predictor.cl  PressureForces.cl  RadixSort.cl  Rates.cl  Rates.hcl  RatesBounds.hcl  RatesSensors.hcl  Reduction.cl  Sensors.cl  Sensors.hcl  SensorsRenormalization.cl  Shepard.cl  Sort.cl  TimeStep.cl  Torque.cl
resources/Presets/: BI.xml.in  BINoSlip.xml.in  CMakeLists.txt  GP.xml.in  GPEnergy.xml.in  GPFreeSlip.xml.in  cfd.xml.in  domain.xml.in  elasticBounce.xml.in  energy.report.xml.in  energy.xml.in  energyNoSlipBI.xml.in  energy_fluid.report.xml.in  energy_fluid.xml.in  fixedGhostParticles.xml.in  fluidEnergy.xml.in  forces.report.xml.in  forces.xml.in  id_inverse.xml.in  inlet.xml.in  inletEnergy.xml.in  motion.xml.in  noSlipBI.xml.in  outlet.xml.in  outletEnergy.xml.in  performance.report.xml.in  pressureForces.report.xml.in  pressureForces.xml.in  symmetry.xml.in  timing.report.xml.in  variableTimeStep.xml.in  viscousForces.report.xml.in  viscousForces.xml.in
resources/Scripts/: CMakeLists.txt
src/: ArgumentsManager.cpp  AuxiliarMethods.cpp  CMakeLists.txt  FileManager.cpp  Fluid.cpp  Input.cpp  Output.cpp  ProblemSetup.cpp  PyCast.cpp  ScreenManager.cpp  TimeManager.cpp  Variable.cpp  main.cpp
src/CalcServer/: Assert.cpp  Bounds.cpp  CMakeLists.txt  CalcServer.cpp  Conditional.cpp  Copy.cpp  Corrector.cpp  DensityInterpolation.cpp  Domain.cpp  Energy.cpp  Grid.cpp  If.cpp  Kernel.cpp  LinkList.cpp  MPISync.cpp  Permutate.cpp  Predictor.cpp  Python.cpp  RadixSort.cpp  Rates.cpp  Reduction.cpp  Sensors.cpp  Set.cpp  SetScalar.cpp  Shepard.cpp  Sort.cpp  TimeStep.cpp  Tool.cpp  Torque.cpp  UnSort.cpp
src/Input/: ASCII.cpp  GiD.cpp  XML.cpp
src/InputOutput/: ASCII.cpp  Bounds.cpp  Energy.cpp  FastASCII.cpp  Log.cpp  Logger.cpp  Particles.cpp  Report.cpp  State.cpp  State.cpp.back  VTK.cpp
src/Tokenizer/: Tokenizer.cpp
tests/: CMakeLists.txt
tests/CSV/: CMakeLists.txt
tests/ExternalTool/: CMakeLists.txt  tool.cpp  tool.hpp
tests/If/: CMakeLists.txt
tests/Python/: CMakeLists.txt
tools/: AQUAgpusph-loadAbaqus  AQUAgpusph-loadGiD  Abaqus.py  CMakeLists.txt  GiD.py  setup.py
(+1242 files in other folders)
